# flash-card

./: .gitignore  README.md  app.vue  bun.lockb  index.html  nuxt.config.ts  package.json
components/: flashCard.vue
pages/: index.vue
prisma/: dev.db  schema.prisma
prisma/migrations/20240702142948_init/: migration.sql
prisma/migrations/20240702144220_add/: migration.sql
prisma/migrations/20240702145305_change_unique_constraint/: migration.sql
prisma/migrations/20240703104903_init/: migration.sql
prisma/migrations/20240704063554_add_set_model/: migration.sql
server/: dataSets.ts  test.ts  test2.ts  test3.ts
server/api/sets/: all.get.ts
server/api/words/: add.post.ts  all.get.ts  index.get.ts  single.get.ts  single.post.ts
server/api/words/set/: [setId].get.ts  index.get.ts
src/: App.vue
src-tauri/: Cargo.toml  build.rs  dev.db  diesel.toml  tauri.conf.json
src-tauri/migrations/2024-07-07-164513_init/: down.sql  up.sql
src-tauri/migrations/2024-07-07-165110_init/: down.sql  up.sql
src-tauri/migrations/2024-07-07-165444_remove_prisma/: down.sql  up.sql
src-tauri/migrations/2024-07-09-083432_add_test_data/: down.sql  up.sql
src-tauri/migrations/2024-07-09-084652_add_defaults/: down.sql  up.sql
src-tauri/migrations/2024-07-09-085853_constrain_words/: down.sql  up.sql
src-tauri/src/: api.rs  lib.rs  migrations.rs  models.rs  schema.rs  words.json  words.rs
src-tauri/src/sea/: schema.rs
src/assets/: datasets.ts  testData.ts
src/components/: flashCard.vue  flashCardSet.vue
