[package]
name = "flashcard"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "flashcard_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# rusqlite = { version = "0.25", features = ["bundled"] }
# diesel = { version = "2.2.0", features = ["sqlite", "chrono"] }
# diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
# chrono = "0.4.38"
# once_cell = "1.19.0"
# reqwest = "0.11"
# tokio = { version = "1", features = ["full"] }
# openssl = { version = "0.10", features = ["vendored"] }

[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2.0.0-beta"
